gcc/testsuite/g++.dg/warn/Wconversion-null-3.C
@@ -1,0 +1,8 @@
+// PR c++/48420
+
+void foo(int* p);
+
+void bar() {
+  const bool kDebugMode = false;
+  foo(kDebugMode);   // { dg-warning "converting 'false'" }
+}
